# loyalty

./: .env.dev  .env.example  Dockerfile  README.md  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  justfile  nginx.dev.conf  openapi.yml  pyproject.toml  test.Dockerfile
.config/deploy/: nginx.ssl.conf
.config/dev/: .env.dev  .env.dev.minio  nginx.dev.conf
.github/workflows/: deploy.yml  lint_and_test.yml
docs/: openapi.yml
src/crudik/adapters/: config_loader.py  yandex_gpt.py
src/crudik/adapters/db/: provider.py
src/crudik/application/: ping.py
src/crudik/bootstrap/di/: container.py
src/loyalty/adapters/: api_client.py  api_models.py  config_loader.py  hasher.py  idp.py  image_utils.py  minio.py  simple_auth.py  user.py  web_auth.py  yandex_geocoder.py
src/loyalty/application/: create_client.py  ping.py  shared_types.py
src/loyalty/bootstrap/: cli.py
src/loyalty/domain/: shared_types.py
tests/: conftest.py
tests/e2e/: api_client.py  conftest.py  status.py  test_login.py  test_ping.py
tests/e2e/business/: conftest.py  test_create.py  test_read.py  test_sign_up.py
tests/e2e/business_branch/: test_create.py  test_delete.py  test_read.py  test_update.py
tests/e2e/client/: conftest.py  test_create.py  test_read.py  test_sign_up.py
tests/e2e/loyalty/: test_create.py  test_delete.py  test_read.py  test_update.py
tests/e2e/membership/: test_create.py
tests/e2e/user/: test_login.py  test_logout.py  test_read.py  test_signup.py
tests/integration/: test_ping.py
tests/integration/bonus/: test_calc_discount.py  test_read.py
tests/integration/business/: test_attach.py  test_create.py  test_detach.py  test_read.py  test_stats.py
tests/integration/business_branch/: test_create.py  test_delete.py  test_read.py  test_update.py
tests/integration/client/: test_create.py  test_read.py
tests/integration/loyalty/: test_create.py  test_delete.py  test_read.py  test_update.py
tests/integration/membership/: test_create.py  test_delete.py  test_list.py  test_read.py
tests/integration/payment/: test_create.py  test_delete.py  test_discount.py  test_read.py
tests/integration/user/: test_logout.py  test_read.py
(+191 files in other folders)
