[build-system]
requires = ['setuptools==68.1.2']
build-backend = 'setuptools.build_meta'

[project]
name = 'loyalty'
version = '0.0.1'
readme = 'README.md'
requires-python = '>=3.13'
dependencies = [
    "dishka==1.4.2",
    "sqlalchemy==2.0.37",
    "alembic==1.14.0",
    "aiohttp==3.11.16",
    "adaptix==3.0.0b9",
    "psycopg[binary,pool]==3.2.6",
    "flask==3.1.0",
    "gunicorn==23.0.0",
    "argon2-cffi==23.1.0",
    "pydantic==2.10.6",
    "pydantic-extra-types==2.10.3",
    "phonenumbers==9.0.2",
    "flask-json==0.4.0",
    "geoalchemy2==0.17.1",
    "email-validator==2.2.0",
    "pyjwt==2.10.1",
    "flask-uuid==0.2",
    "shapely==2.1.0",
]

[project.optional-dependencies]
lint = ['ruff==0.9.10', 'mypy==1.15.0']
test = [
    'pytest==8.3.5',
    'pytest-asyncio==0.25.3',
    'coverage==7.6.12',
    'aiohttp==3.11.16',
]
dev = ['loyalty[test,lint]']
ci = ['loyalty[dev]']

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.mypy]
strict = true
warn_unreachable = true
show_column_numbers = true
show_error_context = true
check_untyped_defs = true
ignore_missing_imports = false
warn_no_return = true

files = ["src/", "tests/"]
exclude = ["src/loyalty/adapters/db/alembic/"]

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
exclude = ["src/**/adapters/db/alembic/**/*.py"]

[tool.ruff.lint]
select = ['ALL']

ignore = [
    # Strange and obscure
    'D100',
    'D104',
    'D101',
    'D105',
    'D102',
    'RET504',
    'D103',
    'PLR0913',
    'S101',
    'EM101',
    'TRY003',
    'D107',
    'ARG002',
    'RUF001',
    'PLR0912',
    'C901',
    'PGH003',
    'RUF003',
    'TC002',
    'D205',
    'RUF002',
    # Does not work correctly
    'S104',
    'ANN401',
    'PLR2004',
]

[[project.authors]]
name = 'lubaskinc0de'
email = 'lubaskincorporation@gmail.com'

[project.scripts]
crudik = "loyalty.bootstrap.cli:main"
